# quantcast_challenge

./: CMakeLists.txt  Parser.h.gch  README.txt  cookie_log.csv  main.cpp  most_active_cookie  run.sh
model/: Cookie.cpp  Cookie.h  CookieJar.cpp  CookieJar.h  Date.cpp  Date.h  Time.cpp  Time.h  TimeStamp.cpp  TimeStamp.h
test/: main.cpp  test.cpp
util/: Parser.cpp  Parser.h  Parser.h.gch
